--- a/appveyor.yml
+++ b/appveyor.yml
@@ -40,11 +40,7 @@ install:
 build: off
 
 test_script:
-  # Put your test command here.
-  # If you don't need to build C extensions on 64-bit Python 3.3 or 3.4,
-  # you can remove "build.cmd" from the front of the command, as it's
-  # only needed to support those cases.
-  # Note that you must use the environment variable %PYTHON% to refer to
-  # the interpreter you're using - Appveyor does not do anything special
-  # to put the Python version you want to use on PATH.
-  - "python -m pytest"
+  - "python -m pytest --cov=pymem"
+
+after_test:
+  - "codecov -t %COV_TOKEN%"
