--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,6 @@
 environment:
 
   matrix:
-    fast_finish: true
     # For Python versions available on Appveyor, see
     # http://www.appveyor.com/docs/installed-software#python
     # The list here is complete (excluding Python 2.6, which
@@ -15,6 +14,9 @@ environment:
       PYTHON_ARCH: "64"
     - PYTHON: "C:\\Python36-x64"
       PYTHON_ARCH: "64"
+
+matrix:
+  fast_finish: true
 
 install:
   # Prepend newly installed Python to the PATH of this build (this cannot be
