--- a/appveyor.yml
+++ b/appveyor.yml
@@ -48,6 +48,7 @@ after_test:
   - "codecov -t %COV_TOKEN%"
   - "python -m pip install -r requirements-doc.txt"
   - "sphinx-apidoc -f -o docs/source pymem"
+  - "cd docs && make.bat html"
 
 artifacts:
   - path: 'docs/build'
