--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,9 @@ coverage.xml
 
 # Sphinx documentation
 docs/_build/
-docs/build/
+docs/source/_build
+docs/source/modules.rst
+docs/source/pymem*
 
 # PyBuilder
 target/
