--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,7 +2,7 @@ environment:
 
   matrix:
     # For Python versions available on Appveyor, see
-    # http://www.appveyor.com/docs/installed-software#python
+    # https://www.appveyor.com/docs/windows-images-software/#python
     # The list here is complete (excluding Python 2.6, which
     # isn't covered by this document) at the time of writing.
 
@@ -13,6 +13,10 @@ environment:
     - PYTHON: "C:\\Python35-x64"
       PYTHON_ARCH: "64"
     - PYTHON: "C:\\Python36-x64"
+      PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Python37-x64"
+      PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Python38-x64"
       PYTHON_ARCH: "64"
 
 matrix:
