--- a/appveyor.yml
+++ b/appveyor.yml
@@ -76,7 +76,7 @@ for:
   deploy: on
 
   deploy_script:
-    - ps: twine upload --verbose --skip-existing dist/* && exit 0
+    - cmd: twine upload --verbose --skip-existing dist/* && exit 0
 
 artifacts:
   - path: 'docs/source/_build/html'
