--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,8 +9,12 @@ formats:
 
 python:
   system_packages: true
-  version: 3.6
   install:
     - requirements: requirements-doc.txt
     - method: pip
       path: .
+
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.10"
