--- a/tox.ini
+++ b/tox.ini
@@ -5,5 +5,7 @@ envlist = py3{8,9,10,11}
 
 [testenv]
 description = Unit tests
-deps = pytest
+deps =
+    pytest
+    pytest-cov
 commands = pytest --cov=pymem
