--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,54 +6,22 @@ environment:
     # The list here is complete (excluding Python 2.6, which
     # isn't covered by this document) at the time of writing.
 
-#    - TOXENV: py38
-#      TOXPYTHON: C:\Python38\python.exe
-#      PYTHON_HOME: C:\Python38
-#      PYTHON_ARCH: "32"
-#      PYTHON_VERSION: '3.8'
-#      ARCH: "32"
-#    - TOXENV: py38
-#      TOXPYTHON: C:\Python38-x64\python.exe
-#      PYTHON_HOME: C:\Python38-x64
-#      PYTHON_ARCH: "64"
-#      PYTHON_VERSION: '3.8'
-#      ARCH: "64"
-    - TOXENV: py39
-      TOXPYTHON: "C:\\Python39\\python.exe"
-      PYTHON_HOME: "C:\\Python39"
+    - PYTHON: "C:\\Python38"
       PYTHON_ARCH: "32"
-      PYTHON_VERSION: '3.9'
-      ARCH: "32"
-    - TOXENV: py39
-      TOXPYTHON: "C:\\Python39-x64\\python.exe"
-      PYTHON_HOME: "C:\\Python39-x64"
-      PYTHON_ARCH: "64"
-      PYTHON_VERSION: '3.9'
-      ARCH: "64"
-    - TOXENV: py310
-      TOXPYTHON: "C:\\Python310\\python.exe"
-      PYTHON_HOME: "C:\\Python310"
-      PYTHON_VERSION: '3.10'
+    - PYTHON: "C:\\Python39"
       PYTHON_ARCH: "32"
-      ARCH: "32"
-    - TOXENV: py310
-      TOXPYTHON: "C:\\Python310-x64\\python.exe"
-      PYTHON_HOME: "C:\\Python310-x64"
-      PYTHON_ARCH: "64"
-      PYTHON_VERSION: '3.10'
-      ARCH: "64"
-    - TOXENV: py311
-      TOXPYTHON: "C:\\Python311\\python.exe"
-      PYTHON_HOME: "C:\\Python311"
+    - PYTHON: "C:\\Python310"
       PYTHON_ARCH: "32"
-      PYTHON_VERSION: '3.11'
-      ARCH: "32"
-    - TOXENV: py311
-      TOXPYTHON: "C:\\Python311-x64\\python.exe"
-      PYTHON_HOME: "C:\\Python311-x64"
+    - PYTHON: "C:\\Python311"
+      PYTHON_ARCH: "32"
+    - PYTHON: "C:\\Python38-x64"
       PYTHON_ARCH: "64"
-      PYTHON_VERSION: '3.11'
-      ARCH: "64"
+    - PYTHON: "C:\\Python39-x64"
+      PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Python310-x64"
+      PYTHON_ARCH: "64"
+    - PYTHON: "C:\\Python311-x64"
+      PYTHON_ARCH: "64"
 
   global:
     TWINE_USERNAME: __token__
@@ -67,36 +35,34 @@ install:
   # Prepend newly installed Python to the PATH of this build (this cannot be
   # done from inside the powershell script as it would require to restart
   # the parent CMD process).
-  - "SET PATH=%PYTHON_HOME%;%PYTHON_HOME%\\Scripts;%PATH%"
+  - "SET PATH=%PYTHON%;%PYTHON%\\Scripts;%PATH%"
 
   # Check that we have the expected version and architecture for Python
-  - "%TOXPYTHON% --version"
-  - "%TOXPYTHON% -c \"import struct; print(struct.calcsize('P') * 8)\""
+  - "python --version"
+  - "python -c \"import struct; print(struct.calcsize('P') * 8)\""
 
   # Upgrade to the latest version of pip to avoid it displaying warnings
   # about it being out of date.
-  - "%TOXPYTHON% -m pip install --upgrade pip"
+  - "python -m pip install --upgrade pip"
 
   # Install the build dependencies of the project. If some dependencies contain
   # compiled extensions and are not provided as pre-built wheel packages,
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
-  - "%TOXPYTHON% -m pip install -r requirements-test.txt"
+  - "python -m pip install -r requirements-test.txt"
 
 build: off
 
 test_script:
-  - "%TOXPYTHON% --version"
-  - '%PYTHON_HOME%\Scripts\tox -e %TOXENV%'
+  - "python -m pytest --cov=pymem"
 
 after_test:
-  - "py --version"
   - "codecov -t %COV_TOKEN%"
-  - "%TOXPYTHON% -m pip install -r requirements-doc.txt"
+  - "python -m pip install -r requirements-doc.txt"
   - "sphinx-apidoc -f -o docs/source pymem"
   - "cd docs/source && make.bat html"
-  - "%TOXPYTHON% -m pip install wheel"
-  - "%TOXPYTHON% setup.py sdist bdist_wheel"
+  - "python -m pip install wheel"
+  - "python setup.py sdist bdist_wheel"
 
 for:
 -
