--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,8 +12,7 @@ environment:
       PYTHON_ARCH: "64"
 
   global:
-    TWINE_USERNAME: __token__
-    TWINE_PASSWORD:
+    POETRY_PYPI_TOKEN_PYPI:
       secure: uvO05h1Fbx/RYMGq5YMoiWJTp3JkuRbDqnm3VkINHpcUn9BcXRB/e4/aMKuucWFcwUZNpw+9BB5uO6DenpBcQIX1ET/fwoRTcRCRY7E97PKEvvBR29MjpHqX2UkdDCOqyEaNl/KenU9IWdVIDe3PgTYofgha+q2zO/It1LQzVg9L10x6oH0/tMyGz009FUTo+k+CA+VvAx3BJqV3p59b2HARdDVTWuv2UGg9swfDWXd0OPbaFP+iSzEyKBgPclXSfRhB00PlfHK/9PtPQyqMag==
 
 matrix:
@@ -70,7 +69,7 @@ for:
   deploy: on
 
   deploy_script:
-    - cmd: poetry run twine upload --verbose --skip-existing dist/* || exit 0
+    - cmd: poetry publish --build --verbose --skip-existing || exit 0
 
 artifacts:
   - path: 'docs/source/_build/html'
